batch-mode/ai-json-template-derive/tests/trybuild/fail_nested_enum.stderr
error[E0277]: the trait bound `InnerEnum: ai_json_template::AiJsonTemplate` is not satisfied
  --> tests/trybuild/fail_nested_enum.rs:29:16
   |
29 |     something: InnerEnum,
   |                ^^^^^^^^^ the trait `ai_json_template::AiJsonTemplate` is not implemented for `InnerEnum`
   |
   = help: the following other types implement trait `ai_json_template::AiJsonTemplate`:
             FailNestedEnum
             Vec<std::string::String>
